Complete endpoints except for verification

--- a/BioProject/Views/Shared/Error.cshtml
+++ b/BioProject/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+<head lang="en">
     <meta name="viewport" content="width=device-width" />
     <title>Error</title>
 </head>
